--- a/DRRadiov3/res/layout/listeelement_billede_med_titeloverlaegning.xml
+++ b/DRRadiov3/res/layout/listeelement_billede_med_titeloverlaegning.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:id="@+id/imageView"
+            android:id="@+id/billede"
             android:src="@drawable/eksempel_udsendelse"/>
 
     <!--
