--- a/DRRadiov3/res/layout/kanalvisning_aktuel.xml
+++ b/DRRadiov3/res/layout/kanalvisning_aktuel.xml
@@ -4,18 +4,24 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:descendantFocusability="blocksDescendants"
+        >
+    <!--
+                android:descendantFocusability="blocksDescendants"
+                gør at knappen her ikke tager fokus for hele listeelementet
+    -->
 
     <include
-            layout="@layout/listeelement_billede_med_titeloverlaegning"
-            android:id="@+id/include"
+            layout="@layout/element_billede_med_titeloverlaegning"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
 
     <FrameLayout
             android:layout_width="match_parent"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:layout_height="wrap_content">
 
         <LinearLayout
@@ -69,34 +75,36 @@
 
 
     <LinearLayout
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:id="@+id/senest_spillet_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/grå10"
-            android:padding="16dp"
+            android:padding="8dp"
             android:orientation="horizontal">
 
         <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:id="@+id/kunstnerbillede"
+                android:id="@+id/senest_spillet_kunstnerbillede"
                 android:src="@drawable/eksempel_kunstner"/>
 
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="8dp"
                 android:orientation="vertical">
 
 
             <TextView
-                    android:id="@+id/senest_spillet"
+                    android:id="@+id/senest_spillet_overskrift"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="SENEST SPILLET"
                     android:textColor="@color/grå70"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
                     tools:ignore="HardcodedText"
                     />
 
@@ -107,35 +115,41 @@
                     android:orientation="horizontal">
 
                 <TextView
-                        android:id="@+id/titel"
+                        android:id="@+id/senest_spillet_titel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Feel Again One"
                         tools:ignore="HardcodedText"
                         android:textStyle="bold"/>
 
                 <TextView
-                        android:id="@+id/kunstner"
+                        android:id="@+id/senest_spillet_kunstner"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
                         android:text="|  Republic"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:singleLine="true"
                         tools:ignore="HardcodedText"
                         android:layout_weight="1"/>
-
-                <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:scaleType="centerInside"
-                        android:id="@+id/højttalerikon"
-                        android:src="@drawable/dri_lyd2_blaa"/>
 
             </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
+
+    <Button
+            android:id="@+id/hør_live"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="16dp"
+            android:drawableLeft="@drawable/dri_lyd_hvid"
+            android:text="HØR P3 LIVE"
+            android:textColor="@color/hvid"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/knap_blaa_bg"/>
 
 
 </LinearLayout>
