--- a/DRRadiov3/res/layout/hoved_akt.xml
+++ b/DRRadiov3/res/layout/hoved_akt.xml
@@ -5,7 +5,7 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.dk.dr.radio.akt_v3.Hovedaktivitet">
+        tools:context="com.example.dk.dr.radio.akt.Hovedaktivitet">
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions.
@@ -45,7 +45,7 @@
                 android:id="@+id/afspiller_frag"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:name="dk.dr.radio.akt_v3.Afspiller_frag"
+                android:name="dk.dr.radio.akt.Afspiller_frag"
                 tools:layout="@layout/afspiller_lille_frag"/>
 
 
@@ -64,7 +64,7 @@
             android:layout_width="@dimen/navigation_drawer_width"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:name="dk.dr.radio.akt_v3.Venstremenu_frag"
+            android:name="dk.dr.radio.akt.Venstremenu_frag"
             tools:layout="@layout/venstremenu_frag"/>
 
 </android.support.v4.widget.DrawerLayout>
