--- a/DRRadiov3/res/layout/udsendelse_top.xml
+++ b/DRRadiov3/res/layout/udsendelse_top.xml
@@ -17,36 +17,38 @@
             android:layout_height="wrap_content"/>
 
 
-    <TextView
+    <ImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="17.04 XX LOGO"
-            android:textColor="@color/grå70"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            />
+            android:layout_marginLeft="16dp"
+            android:src="@drawable/skrald__kanallogo_p3"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"/>
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
             android:orientation="horizontal">
 
         <TextView
-                android:id="@+id/titelxxx"
+                android:id="@+id/titel2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="P3 Sporten"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold"/>
 
         <TextView
-                android:id="@+id/kunstnerxxx"
+                android:id="@+id/dato"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:singleLine="true"
-                android:text=" - datoen"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text=" - 20. jan 2014"
                 android:layout_weight="1"/>
-
     </LinearLayout>
 
 
@@ -55,6 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
