Fix billedskalerings-URL for disco-server Brug datostabilt API, slå caching til (og forespørg kun én gang)' opdater kun Aktuel Udsendelse hvis den er synlig (Actionbar faner driller stadig)

--- a/DRRadiov3/res/values/dr_colors.xml
+++ b/DRRadiov3/res/values/dr_colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="hvid">#ffffff</color>
+    <color name="grå05x">#F2F2F2</color>
     <color name="grå10">#E5E5E5</color>
     <color name="grå20">#CCCCCC</color>
     <color name="grå40">#999999</color>
