--- a/DRRadiov3/res/layout/skrald_kanaler_frag_v2.xml
+++ b/DRRadiov3/res/layout/skrald_kanaler_frag_v2.xml
@@ -12,11 +12,11 @@
                 android:paddingBottom="4dp"
                 android:paddingTop="4dp"/>
 
-    <dk.dr.radio.diverse.ui.Skrald_HorizontalTabView
+    <dk.dr.radio.skrald.Skrald_HorizontalTabView
             android:id="@+id/pager_title_strip2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            </dk.dr.radio.diverse.ui.Skrald_HorizontalTabView>
+            </dk.dr.radio.skrald.Skrald_HorizontalTabView>
             -->
     <dk.dr.radio.skrald.Skrald_ScrollingTabContainerView
             android:id="@+id/pager_title_strip3"
