--- a/DRRadiov3/res/layout/element_billede_med_titeloverlaegning.xml
+++ b/DRRadiov3/res/layout/element_billede_med_titeloverlaegning.xml
@@ -39,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="LIGE NU"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="16sp"
                 android:background="@color/sort"
                 android:textColor="@color/blå"
                 android:gravity="center_vertical|center_horizontal"
@@ -56,7 +56,7 @@
                 android:background="@color/sort"
                 android:textColor="@color/hvid"
                 android:text="PRESSEN PÅ P3"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="26sp"
                 android:gravity="center_vertical"
                 android:textStyle="bold"
                 android:paddingTop="0dp"
