--- a/DRRadiov3/res/layout/kanaler_frag_v3.xml
+++ b/DRRadiov3/res/layout/kanaler_frag_v3.xml
@@ -4,11 +4,11 @@
               android:layout_height="match_parent">
 
 
-    <com.astuetz.PagerSlidingTabStrip
+    <dk.dr.radio.akt.diverse.PagerSlidingTabStrip
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="48dip"
-            android:background="@drawable/psts_background_tab"/>
+            android:background="@drawable/dr_kanalindikator"/>
 
     <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
                                        android:id="@+id/pager"
