--- a/DRRadiov3/res/layout/kanalvisning_aktuel.xml
+++ b/DRRadiov3/res/layout/kanalvisning_aktuel.xml
@@ -35,6 +35,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="74"
+                    android:textSize="12sp"
                     android:background="@color/grå60"/>
 
             <TextView
@@ -43,7 +44,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="26"
                     android:textColor="@color/hvid"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="12sp"
                     android:background="@color/grå20"/>
             <!--
                                    android:textAppearance="?android:attr/textAppearanceLarge"
@@ -58,8 +59,9 @@
                 android:layout_height="wrap_content"
                 android:text="16.10"
                 android:textColor="@color/hvid"
+                android:textSize="12sp"
+                android:layout_marginLeft="4dp"
                 android:layout_gravity="left"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 tools:ignore="HardcodedText"/>
 
         <TextView
@@ -68,8 +70,9 @@
                 android:layout_height="wrap_content"
                 android:text="16.30"
                 android:layout_gravity="right"
+                android:layout_marginRight="4dp"
                 android:textColor="@color/hvid"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="12sp"
                 tools:ignore="HardcodedText"/>
     </FrameLayout>
 
@@ -137,18 +140,23 @@
 
     </LinearLayout>
 
+    <!--
+        designoplæg siger 36dp, men designretningslinjer på Android siger min 48dp i højde
+        (se http://developer.android.com/design/style/metrics-grids.html)
+                android:layout_height="36dp"
+        -->
     <Button
             android:id="@+id/hør_live"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
             android:paddingLeft="8dp"
             android:paddingRight="16dp"
             android:drawableLeft="@drawable/dri_lyd_hvid"
             android:text="HØR P3 LIVE"
             android:textColor="@color/hvid"
-            android:layout_marginBottom="16dp"
             android:background="@drawable/knap_blaa_bg"/>
 
 
