--- a/DRRadiov3/res/layout/kanalvisning_aktuel.xml
+++ b/DRRadiov3/res/layout/kanalvisning_aktuel.xml
@@ -97,7 +97,7 @@
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_marginLeft="8dp"
                 android:orientation="vertical">
 
