--- a/DRRadiov3/res/values/styles_drxx_ab.xml
+++ b/DRRadiov3/res/values/styles_drxx_ab.xml
@@ -25,6 +25,7 @@
 
     <style name="ActionBar.Solid.Drxx_ab" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="background">@color/grå70</item>
+        <item name="displayOptions">showHome|useLogo</item>
     </style>
 
 </resources>
