--- a/DRRadiov3/res/layout/element_download_del.xml
+++ b/DRRadiov3/res/layout/element_download_del.xml
@@ -17,7 +17,7 @@
             android:gravity="center_vertical"
             android:text=" HENT"
             android:textColor="@color/blå"
-            android:background="@drawable/knap_hvid_bg"/>
+            android:background="@drawable/knap_hvid_bg2"/>
 
     <Button
             android:id="@+id/del"
@@ -30,6 +30,6 @@
             android:gravity="center_vertical"
             android:text=" DEL"
             android:textColor="@color/blå"
-            android:background="@drawable/knap_hvid_bg"/>
+            android:background="@drawable/knap_hvid_bg2"/>
 
 </LinearLayout>
