--- a/DRRadiov3/res/values/dr_colors.xml
+++ b/DRRadiov3/res/values/dr_colors.xml
@@ -12,6 +12,7 @@
     <color name="sort">#000000</color>
 
     <color name="blå">#55b9c4</color>
+    <color name="blå_mørk">#258994</color>
 
     <color name="actionbar_baggrund">#4d4d4d</color>
     <color name="actionbar_kanaler_baggrund">#E5E5E5</color>
