--- a/DRRadiov3/res/layout/element_billede_med_titeloverlaegning.xml
+++ b/DRRadiov3/res/layout/element_billede_med_titeloverlaegning.xml
@@ -32,7 +32,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginLeft="8dp">
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            >
 
         <TextView
                 android:id="@+id/lige_nu"
@@ -64,7 +66,6 @@
                 android:paddingRight="4dp"
                 android:paddingBottom="0dp"
                 android:layout_marginBottom="8dp"/>
-        />
 
     </LinearLayout>
 
