Indstillinger til eksperienter - brugGibsonIVenstremenu og kunSortLigeBagTekst Pænest hvis slået fra (efter min mening, men sikkert ikke efter DRs designafdeling)
Fragmentovergang i stedet for aktivitetsskift når brugeren vil se en udsendelse

--- a/DRRadiov3/res/xml/indstillinger.xml
+++ b/DRRadiov3/res/xml/indstillinger.xml
@@ -50,11 +50,12 @@
             android:defaultValue="false"
             android:summary="Hakker afspilningen når skærmen er slukket så prøv at krydse af her (bruger mere batteri). Nødvendigt på XPeria Play."/>
 
+    <CheckBoxPreference
+            android:key="udvikler" android:title="Udvikler"
+            android:defaultValue="false" android:summaryOff=""
+            android:summaryOn="Til udviklere og fejlfinding. Appen skal genstartes før det træder i kraft"/>
 
     <!--
-        <CheckBoxPreference android:key="udvikler" android:title="Udvikler"
-            android:defaultValue="false" android:summaryOff=""
-        android:summaryOn="Til udviklere og fejlfinding. Appen skal genstartes før det træder i kraft" />
 
      />
 
