--- a/DRRadiov3/res/xml/afspiller_widgetinfo.xml
+++ b/DRRadiov3/res/xml/afspiller_widgetinfo.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:minWidth="40dp"
+                    android:minHeight="40dp"
+
+                    android:updatePeriodMillis="86400000"
+                    android:initialLayout="@layout/afspillerwidget"
+                    android:resizeMode="horizontal|vertical"
+                    android:widgetCategory="keyguard|home_screen"
+                    android:initialKeyguardLayout="@layout/afspillerwidget"
+        >
+    <!--
                     android:minHeight="72dip"
                     android:minWidth="294dip"
-                    android:updatePeriodMillis="3600000" android:initialLayout="@layout/afspillerwidget">
+
+                    Se også
+                    http://developer.android.com/guide/topics/appwidgets/index.html
+    -->
 </appwidget-provider>
