Silles designændringer Deling af en udsendelse

--- a/DRRadiov3/res/layout/kanalvalg_elem.xml
+++ b/DRRadiov3/res/layout/kanalvalg_elem.xml
@@ -4,26 +4,20 @@
               android:layout_width="fill_parent"
               android:layout_height="50dp">
 
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_gravity="right|center_vertical"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/dr_logo"
-            />
-
     <dk.dr.radio.diverse.ImageViewTilBlinde
             android:id="@+id/billede"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
             android:src="@drawable/kanalappendix_drm"
             />
 
     <TextView
             android:id="@+id/tekst"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:text="P4 Esbjerg"
+            android:gravity="left|center_vertical"
             android:textSize="@dimen/kanalvalg_tekststr"
             android:layout_marginLeft="10dp"
             android:textColor="#FF000000"
