--- a/DRRadiov3/res/layout/elem_tid_titel_kunstner.xml
+++ b/DRRadiov3/res/layout/elem_tid_titel_kunstner.xml
@@ -4,8 +4,17 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="16dp"
         android:orientation="vertical">
+
+    <View
+            android:id="@+id/stiplet_linje"
+            android:background="@drawable/stiplet_linje"
+            android:layout_width="match_parent"
+            android:layout_marginBottom="13dp"
+            android:layout_height="3dp"/>
 
 
     <TextView
