--- a/DRRadiov3/res/layout/kanal_frag.xml
+++ b/DRRadiov3/res/layout/kanal_frag.xml
@@ -4,6 +4,8 @@
 
     <ListView
             android:id="@+id/listView"
+            android:divider="@null"
+            android:layerType="software"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"/>
     <!-- hurtigscroll
