--- a/DRRadiov3/res/layout/kanalelem_aktuel.xml
+++ b/DRRadiov3/res/layout/kanalelem_aktuel.xml
@@ -138,7 +138,7 @@
     <Button
             android:id="@+id/hør_live"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
