--- a/DRRadiov3/res/layout/udsendelse_elem_download_del.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem_download_del.xml
@@ -7,9 +7,23 @@
 
 
     <Button
+            android:id="@+id/kan_endnu_ikke_hentes"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="16dp"
+            android:gravity="center_vertical"
+            android:text="UDSENDELSEN KAN ENDNU IKKE HENTES"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="@color/grå40"
+            android:background="@drawable/knap_hvid_bg2"/>
+
+
+    <Button
             android:id="@+id/hent"
             android:layout_width="0px"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_marginTop="8dp"
             android:paddingLeft="16dp"
