Rigtig mange layoutjusteringer DownloadManager påbegyndt

--- a/DRRadiov3/res/drawable/p4_vi_gaetter_paa_at_du_vaelger_dialogbg.xml
+++ b/DRRadiov3/res/drawable/p4_vi_gaetter_paa_at_du_vaelger_dialogbg.xml
@@ -3,7 +3,5 @@
     <solid android:color="@color/grå10"/>
     <stroke
             android:width="2dp" android:color="@color/sort"/>
-    <corners
-            android:radius="16dp"/>
-
+    <corners android:radius="16dp"/>
 </shape>
