--- a/DRRadiov3/res/layout/kanal_elem_tidligere_senere.xml
+++ b/DRRadiov3/res/layout/kanal_elem_tidligere_senere.xml
@@ -5,6 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:descendantFocusability="blocksDescendants"
+        android:background="@drawable/knap_graa_bg"
         android:padding="16dp"
         android:orientation="horizontal">
 
@@ -12,7 +13,7 @@
     <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="right"
             android:id="@+id/progressBar"/>
 
 
