--- a/DRRadiov3/res/layout/kanalelem_aktuel.xml
+++ b/DRRadiov3/res/layout/kanalelem_aktuel.xml
@@ -112,20 +112,14 @@
                     />
 
 
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
                 <TextView
-                        android:id="@+id/senest_spillet_titel_og_kunstner"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/titel_og_kunstner"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Feel Again One | Republic"
                         android:maxLines="2"
                         tools:ignore="HardcodedText"/>
 
-            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
@@ -147,7 +141,7 @@
             android:drawableLeft="@drawable/dri_lyd_hvid"
             android:text="HØR P3 LIVE"
             android:textColor="@color/hvid"
-            android:background="@drawable/knap_blaa_bg2"/>
+            android:background="@drawable/knap_blaa_bg"/>
 
 
 </LinearLayout>
