--- a/DRRadiov3/res/layout/skrald_kanaler_frag_v2.xml
+++ b/DRRadiov3/res/layout/skrald_kanaler_frag_v2.xml
@@ -8,7 +8,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
-                android:background="@drawable/gradient"
+                android:background="@drawable/skrald_gradient"
                 android:paddingBottom="4dp"
                 android:paddingTop="4dp"/>
 
