Afspiller ny struktur - kan nu vise hvad der spilles Dropshadow på lister på Android 3+

--- a/DRRadiov3/res/layout/kanal_frag.xml
+++ b/DRRadiov3/res/layout/kanal_frag.xml
@@ -6,7 +6,9 @@
             android:id="@+id/listView"
             android:divider="@null"
             android:dividerHeight="0px"
-            android:cacheColorHint="@color/grå10"
+            android:requiresFadingEdge="vertical"
+            android:fadingEdgeLength="4dp"
+            android:cacheColorHint="@color/grå20"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"/>
     <!--
