--- a/DRRadiov3/res/layout/udsendelse_elem0_top.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem0_top.xml
@@ -69,14 +69,12 @@
     <include
             layout="@layout/udsendelse_elem_hent_del"
             android:layout_width="match_parent"
-            android:layout_marginBottom="16dp"
             android:layout_height="wrap_content"/>
 
 
     <TextView
             android:id="@+id/beskrivelse"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
+            android:layout_margin="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="For lige om lidt bliver fremdriftsreformen implementeret."
