--- a/DRRadiov3/res/drawable/knap_blaa_bg.xml
+++ b/DRRadiov3/res/drawable/knap_blaa_bg.xml
@@ -8,6 +8,14 @@
         </shape>
     </item>
 
+    <item android:state_enabled="false">
+        <shape android:shape="rectangle">
+            <corners android:radius="4dp"/>
+            <solid android:color="@color/grå10"/>
+        </shape>
+    </item>
+
+
     <!-- Den mest generelle skal være nederst -->
     <item>
         <shape android:shape="rectangle">
