--- a/DRRadiov3/res/layout/afspiller_lille_frag.xml
+++ b/DRRadiov3/res/layout/afspiller_lille_frag.xml
@@ -45,6 +45,7 @@
                 android:text="Smag på P3"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textStyle="bold"
+                android:maxLines="2"
                 tools:ignore="HardcodedText"
                 android:textColor="@color/hvid"/>
 
